<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wi Light</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_modify">ModifyActivity</string>
    <string name="confirm">Confirm</string>
    <string name="modify">Modify</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
	
	<string name="on">ON</string>
    <string name="off">OFF</string>
	
	<string name="SSID">SSID</string>
	<string name="PWD">Password</string>
	<string name="WAN_IP">WAN IP</string>
	<string name="serial_number">Serial Number</string>
	<string name="dev_name">Name</string>
	
	<string name="modify_btn">Modify Button</string>
	<string name="delete_btn">Delete Button</string>
</resources>
