<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ModifylistRelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="10"
    android:padding="5dip" >

    <TextView
        android:id="@+id/ModifyNameListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/dev_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <ImageButton
        android:id="@+id/deleteBtn"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignBaseline="@+id/modifyBtn"
        android:layout_alignBottom="@+id/modifyBtn"
        android:layout_alignParentRight="true"
        android:src="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/delete_btn"
        android:scaleType="center"/>

    <ImageButton
        android:id="@+id/modifyBtn"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/ModifyNameListTextView"
        android:layout_below="@+id/ModifyNameListTextView"
        android:src="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/modify_btn"
        android:scaleType="center"/>

</RelativeLayout>