<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listRelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="10"
    android:padding="5dip" >

    <TextView
        android:id="@+id/NameListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/dev_name"        
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <Button
        android:id="@+id/offBtn"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignBaseline="@+id/onBtn"
        android:layout_alignBottom="@+id/onBtn"
        android:layout_alignParentRight="true"
        android:text="@string/off"
        android:textSize="30sp" />

    <Button
        android:id="@+id/onBtn"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/NameListTextView"
        android:layout_below="@+id/NameListTextView"
        android:text="@string/on"
        android:textSize="30sp" />

    <Switch
        android:id="@+id/LanWanSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/offBtn"
        android:layout_alignTop="@+id/NameListTextView"
        android:checked="true"
        android:textSize="50sp"
        android:textOff="WAN"
        
        android:textOn="LAN" />

</RelativeLayout>