<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wifihome.light.AddActivity" >

    <Button
        android:id="@+id/ConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:text="@string/serial_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/WanIPeditText"
        android:layout_below="@+id/pwdeditText"
        android:text="@string/WAN_IP"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/SerialNumEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:longClickable="false"
        android:singleLine="true">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SSIDeditText"
        android:layout_below="@+id/SerialNumEditText"
        android:text="@string/SSID"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/SSIDeditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/SSIDeditText"
        android:text="@string/PWD"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/pwdeditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:longClickable="false"
        android:singleLine="true" />

    <EditText
        android:id="@+id/WanIPeditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="18dp"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:longClickable="false"
        android:singleLine="true" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/WanIPeditText"
        android:layout_below="@+id/WanIPeditText"
        android:text="@string/dev_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/NameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView02"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:singleLine="true" >        
    </EditText>

</RelativeLayout>