<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wifihome.light.AddActivity" >

    <Button
        android:id="@+id/ModifyConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/confirm" />

    <EditText
        android:id="@+id/ModifyWanIPeditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:longClickable="false"
        android:singleLine="true" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ModifyNameEditText"
        android:layout_below="@+id/ModifyWanIPeditText"
        android:text="@string/dev_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ModifyNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView02"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ModifyWanIPeditText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:text="@string/WAN_IP"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>